Blender crashes -> Append Group incl. Object using boolean modifier #49903

Closed
opened 2016-11-01 18:29:51 +01:00 by Dietmar Nelles · 13 comments

System Information
OS: Windows 10 (64 Bit)
CPU: Intel i5-2500 3.30GHz
GFX: nVidea GeForce GTX 650 Ti
RAM: 8 GB

Blender Version
Blender 2.78a (2016-10-24 12:20 / Hash: e8299c8)

Short description of error
Appending a Group (3 Objects) with boolean modifier crashes Blender

Exact steps for others to reproduce the error

  • Create new File in Blender
  • Delete all Objects
  • Create Cube, Cylinder, Cone
  • Add all (Cube, Cylinder, Cone) to a new Group
  • Cylinder: Relations -> Parent -> Cube
  • Cube: Add Modifier Boolean (Operation: Difference / Objekt: Cylinder)
  • Save as TMP01.blend
  • Create new Blend-File
  • Delete all Objects
  • Append Group from File TMP01.blend
  • Blender crashes
**System Information** OS: Windows 10 (64 Bit) CPU: Intel i5-2500 3.30GHz GFX: nVidea GeForce GTX 650 Ti RAM: 8 GB **Blender Version** Blender 2.78a (2016-10-24 12:20 / Hash: e8299c8) **Short description of error** Appending a Group (3 Objects) with boolean modifier crashes Blender **Exact steps for others to reproduce the error** - Create new File in Blender - Delete all Objects - Create Cube, Cylinder, Cone - Add all (Cube, Cylinder, Cone) to a new Group - Cylinder: Relations -> Parent -> Cube - Cube: Add Modifier Boolean (Operation: Difference / Objekt: Cylinder) - Save as TMP01.blend - Create new Blend-File - Delete all Objects - Append Group from File TMP01.blend - Blender crashes
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @madOS

Added subscriber: @madOS
Dietmar Nelles changed title from Append Group incl. Object using boolean modifier to Blender crashes -> Append Group incl. Object using boolean modifier 2016-11-01 18:40:00 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Everything worked when I tried. Please:

Everything worked when I tried. Please: - Test with a version of Blender from https://builder.blender.org/download/ - Upload the file with the group that crashes so we can try to reproduce with that
Author

Hi,
it's still the same.
Blender 2.78
Date: 2016-11-03 02:15
Hash: f800794

Please create a new Blender file and delete all objects.
Try to append (Shift F1) the Group "Group" from the uploaded File "TMP01.blend" TMP01.blend (created with Hash: f800794)

BlenderError.JPG

Hi, it's still the same. Blender 2.78 Date: 2016-11-03 02:15 Hash: f800794 Please create a new Blender file and delete all objects. Try to append (Shift F1) the Group "Group" from the uploaded File "TMP01.blend" [TMP01.blend](https://archive.blender.org/developer/F392344/TMP01.blend) (created with Hash: f800794) ![BlenderError.JPG](https://archive.blender.org/developer/F392345/BlenderError.JPG)
Member

Ok I can confirm that it crashes with the file you gave

Ok I can confirm that it crashes with the file you gave
Bastien Montagne was assigned by Aaron Carlisle 2016-11-03 19:51:43 +01:00
Member
19: BLI_system_backtrace - 0x316869B0
18: id_us_clear_real - 0x30EACB10
17: libblock_remap_data - 0x30EC21D0
16: BKE_libblock_remap_locked - 0x30EC0A90
15: BKE_libblock_unlink - 0x30EC1050
14: BKE_library_make_local - 0x30EAF9D0
13: wm_link_append_exec - 0x2FE8FF00
12: wm_handler_fileselect_do - 0x2FE69A40
11: wm_handler_fileselect_call - 0x2FE6A010
10: wm_handlers_do_intern - 0x2FE6A2B0
9: wm_handlers_do - 0x2FE6A940
8: wm_event_do_handlers - 0x2FE64FD0
7: WM_main - 0x2FE47FB0
6: main - 0x2FE40AA0
5: invoke_main - 0x35F369D0
4: __scrt_common_main_seh - 0x35F36780
3: __scrt_common_main - 0x35F36760
2: mainCRTStartup - 0x35F36A20
1: BaseThreadInitThunk - 0xE29D8350
0: RtlUserThreadStart - 0xE40F5E70
BLI_assert failed: C:\Users\Aaron\BlenderDev\blender-git\blender\source\blender\blenkernel\intern\library.c:190, id_us_clear_real(), at 'id->us >= ((((ID *)id)->flag & LIB_FAKEUSER) ? 1 : 0)'
19: BLI_system_backtrace - 0x316869B0
18: BKE_idcode_to_index - 0x30F1AA80
17: DAG_id_type_tag - 0x30E3DDC0
16: BKE_libblock_free_ex - 0x30EC0120
15: BKE_libblock_free - 0x30EC00D0
14: BKE_library_make_local - 0x30EAF9D0
13: wm_link_append_exec - 0x2FE8FF00
12: wm_handler_fileselect_do - 0x2FE69A40
11: wm_handler_fileselect_call - 0x2FE6A010
10: wm_handlers_do_intern - 0x2FE6A2B0
9: wm_handlers_do - 0x2FE6A940
8: wm_event_do_handlers - 0x2FE64FD0
7: WM_main - 0x2FE47FB0
6: main - 0x2FE40AA0
5: invoke_main - 0x35F369D0
4: __scrt_common_main_seh - 0x35F36780
3: __scrt_common_main - 0x35F36760
2: mainCRTStartup - 0x35F36A20
1: BaseThreadInitThunk - 0xE29D8350
0: RtlUserThreadStart - 0xE40F5E70
BLI_assert failed: C:\Users\Aaron\BlenderDev\blender-git\blender\source\blender\blenkernel\intern\idcode.c:308, BKE_idcode_to_index(), at '0'
Error: EXCEPTION_ACCESS_VIOLATION
``` 19: BLI_system_backtrace - 0x316869B0 18: id_us_clear_real - 0x30EACB10 17: libblock_remap_data - 0x30EC21D0 16: BKE_libblock_remap_locked - 0x30EC0A90 15: BKE_libblock_unlink - 0x30EC1050 14: BKE_library_make_local - 0x30EAF9D0 13: wm_link_append_exec - 0x2FE8FF00 12: wm_handler_fileselect_do - 0x2FE69A40 11: wm_handler_fileselect_call - 0x2FE6A010 10: wm_handlers_do_intern - 0x2FE6A2B0 9: wm_handlers_do - 0x2FE6A940 8: wm_event_do_handlers - 0x2FE64FD0 7: WM_main - 0x2FE47FB0 6: main - 0x2FE40AA0 5: invoke_main - 0x35F369D0 4: __scrt_common_main_seh - 0x35F36780 3: __scrt_common_main - 0x35F36760 2: mainCRTStartup - 0x35F36A20 1: BaseThreadInitThunk - 0xE29D8350 0: RtlUserThreadStart - 0xE40F5E70 BLI_assert failed: C:\Users\Aaron\BlenderDev\blender-git\blender\source\blender\blenkernel\intern\library.c:190, id_us_clear_real(), at 'id->us >= ((((ID *)id)->flag & LIB_FAKEUSER) ? 1 : 0)' 19: BLI_system_backtrace - 0x316869B0 18: BKE_idcode_to_index - 0x30F1AA80 17: DAG_id_type_tag - 0x30E3DDC0 16: BKE_libblock_free_ex - 0x30EC0120 15: BKE_libblock_free - 0x30EC00D0 14: BKE_library_make_local - 0x30EAF9D0 13: wm_link_append_exec - 0x2FE8FF00 12: wm_handler_fileselect_do - 0x2FE69A40 11: wm_handler_fileselect_call - 0x2FE6A010 10: wm_handlers_do_intern - 0x2FE6A2B0 9: wm_handlers_do - 0x2FE6A940 8: wm_event_do_handlers - 0x2FE64FD0 7: WM_main - 0x2FE47FB0 6: main - 0x2FE40AA0 5: invoke_main - 0x35F369D0 4: __scrt_common_main_seh - 0x35F36780 3: __scrt_common_main - 0x35F36760 2: mainCRTStartup - 0x35F36A20 1: BaseThreadInitThunk - 0xE29D8350 0: RtlUserThreadStart - 0xE40F5E70 BLI_assert failed: C:\Users\Aaron\BlenderDev\blender-git\blender\source\blender\blenkernel\intern\idcode.c:308, BKE_idcode_to_index(), at '0' Error: EXCEPTION_ACCESS_VIOLATION ```

This issue was referenced by 4a68ff150f

This issue was referenced by 4a68ff150f47bfeb4d4252473b2b906d14f091c5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

System Information
OS: Windows 10 (64 Bit)
CPU: Intel i5-2500 3.30GHz
GFX: nVidea GeForce GTX 650 Ti
RAM: 8 GB

Blender Version
version: 2.78 (sub 0), branch: master, commit date: 2017-02-08 13:50, hash: 3c04373, type:
build date: Wed 02/08/2017, 07:45 AM

Hi,
The bug is back in Blender 2.78.b
I've created a new TMP02.blend file TMP02.blend using Blender 2.78b.
Please try to append the group 'group' (from TMP02.blend) in an empty new blend-file. On my system the blender task disapears immediately without any message box.

System Information OS: Windows 10 (64 Bit) CPU: Intel i5-2500 3.30GHz GFX: nVidea GeForce GTX 650 Ti RAM: 8 GB Blender Version version: 2.78 (sub 0), branch: master, commit date: 2017-02-08 13:50, hash: 3c04373, type: build date: Wed 02/08/2017, 07:45 AM Hi, The bug is back in Blender 2.78.b I've created a new TMP02.blend file [TMP02.blend](https://archive.blender.org/developer/F487160/TMP02.blend) using Blender 2.78b. Please try to append the group 'group' (from TMP02.blend) in an empty new blend-file. On my system the blender task disapears immediately without any message box.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

sight 2.78b is not a bugfix release, it is a performances release (mostly for Cycles improvements). Wait for 2.79.

*sight* 2.78b is not a bugfix release, it is a performances release (mostly for Cycles improvements). Wait for 2.79.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49903
No description provided.